<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    tools:context=".CalculateActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_directions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioLetters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/letters" />

        <RadioButton
            android:id="@+id/radioLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_envelopes" />

        <RadioButton
            android:id="@+id/radioPackages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packages" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_input"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculatePostage"
        android:text="@string/calc_button" />

</LinearLayout>